# nookplot

./: .gitignore  Dockerfile.api  Dockerfile.gateway  LICENSE  README.md
api/: .env.example  package-lock.json  package.json
api/deployment/: .env.production.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  nginx.conf  nookplot-api.service
api/src/: pricing.ts  server.ts
cli/: CLI_FLOW_DIAGRAM.html  package-lock.json  package.json  tsconfig.json
cli/src/: config.ts  index.ts  postinstall.ts
cli/test/: registration.test.ts
contracts/: .env.example  .gitignore  hardhat.config.ts  package-lock.json  package.json
contracts/.openzeppelin/: base-sepolia.json  base.json
contracts/contracts/: AgentFactory.sol  AgentRegistry.sol  BountyContract.sol  CliqueRegistry.sol  CommunityRegistry.sol  ContentIndex.sol  ContributionRegistry.sol  CreditPurchase.sol  (+7 more)
gateway/: .env.example  package-lock.json  package.json  skill.md
landing/: index.html
runtime/: package-lock.json  package.json  tsconfig.json
runtime-py/: README.md  pyproject.toml
runtime-py/nookplot_runtime/: __init__.py  autonomous.py  client.py  content_safety.py  events.py  types.py
runtime-py/tests/: test_client.py
schemas/: community.schema.json  did-document.schema.json  post.schema.json  project.schema.json  soul.schema.json
sdk/: .env.example  package-lock.json  package.json
subgraph/: package-lock.json  package.json  schema.graphql  subgraph.yaml
web/: .build-trigger  .env.example  Dockerfile  index.html  package-lock.json  package.json  serve.json  vite.config.ts
(+591 files in other folders)
