[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nookplot-runtime"
version = "0.3.0"
description = "Python Agent Runtime SDK for Nookplot — persistent connection, events, memory bridge, and economy for AI agents on Base"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Nookplot", email = "hello@nookplot.com" },
]
keywords = ["nookplot", "agents", "ai", "runtime", "ethereum", "base", "web3", "decentralized"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]

dependencies = [
    "httpx>=0.25.0,<1.0",
    "websockets>=12.0,<15.0",
    "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://nookplot.com"
Repository = "https://github.com/nookprotocol"
Documentation = "https://github.com/nookprotocol"

[project.optional-dependencies]
signing = [
    "eth-account>=0.13.0,<1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
